[package]
name = "bse-web"
version = "0.1.0"
authors = ["xiao_e_yun <67814228+QAZXSW517@users.noreply.github.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
butterfly-soul-engine = { path = "../ButterflySoulEngine" }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.87"
js-sys = "0.3.68"
serde = "1.0.197"

[dependencies.web-sys]
version = "0.3.4"
features = [
 'CanvasRenderingContext2d',
 'HtmlCanvasElement',
 'CanvasPattern',
 'ImageBitmap',
]
